# myassistant

./: .gitignore  README.md  app.py  pyproject.toml
.chainlit/: config.toml
